[gd_scene load_steps=2 format=3 uid="uid://be3h8v7j1qr6f"]

[ext_resource type="Script" path="res://scripts/components/flying_letter.gd" id="1_x7k9l"]

[node name="FlyingLetter" type="Node2D"]
script = ExtResource("1_x7k9l")

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
horizontal_alignment = 1
vertical_alignment = 1
text = "A"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-10, -10, 20, 20)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_cleanup_timeout"]